--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "tap": "^18.6.1"
     },
     "dependencies": {
+        "axios": "^1.11.0",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
